[gd_scene load_steps=3 format=3 uid="uid://ces5ax6ygno3w"]

[ext_resource type="Script" path="res://game/entities/ui/hud/inventory_quick_bar.gd" id="1_820no"]
[ext_resource type="Texture2D" uid="uid://b4ueuif8f8npe" path="res://game/assets/icons/icon.svg" id="1_c3n4s"]

[node name="InventoryQuickBar" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_820no")

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_c3n4s")
expand_mode = 1
stretch_mode = 4

[node name="QuantityLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "10"
text_direction = 2
